--- a/templates/pages/flat/index.html.twig
+++ b/templates/pages/flat/index.html.twig
@@ -4,15 +4,37 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container">
+	<div class="container mt-4">
 		<h1>Plats</h1>
-		{% for flat in flats %}
 
-			<div>
-				<p>{{ flat.name }}</p>
-			</div>
 
-		{% endfor %}
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th scope="col">Numéro</th>
+					<th scope="col">Nom</th>
+					<th scope="col">Description</th>
+					<th scope="col">prix</th>
+					<th scope="col">image</th>
+					<th scope="col">active</th>
+				</tr>
+				</thead>
+				<tbody>
+				{% for flat in flats %}
+				<tr class="table-primary">
+					<th scope="row">{{ flat.id }}</th>
+					<td>{{ flat.name }}</td>
+					<td>{{ flat.description }}</td>
+					<td>{{ flat.price }}</td>
+					<td>{{ flat.image }}</td>
+					<td>{{ flat.active }}</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<div class="navigation">
+    {{ knp_pagination_render(pagination) }}
+		</div>
 	</div>
 {% endblock %}
 
