--- a/templates/pages/flat/index.html.twig
+++ b/templates/pages/flat/index.html.twig
@@ -5,8 +5,14 @@
 
 {% block body %}
 	<div class="container mt-4">
+	{% if not flats.items is same as([]) %}
 		<h1>Plats</h1>
-
+		<div class="count mt-4">
+			<h4>Il y a
+			{{ flats.getTotalItemCount }}
+				plats au total
+			</h4>
+		</div>
 
 		<table class="table table-hover">
 			<thead>
@@ -18,23 +24,25 @@
 					<th scope="col">image</th>
 					<th scope="col">active</th>
 				</tr>
-				</thead>
-				<tbody>
+			</thead>
+			<tbody>
 				{% for flat in flats %}
-				<tr class="table-primary">
-					<th scope="row">{{ flat.id }}</th>
-					<td>{{ flat.name }}</td>
-					<td>{{ flat.description }}</td>
-					<td>{{ flat.price }}</td>
-					<td>{{ flat.image }}</td>
-					<td>{{ flat.active }}</td>
-				</tr>
+					<tr class="table-primary">
+						<th scope="row">{{ flat.id }}</th>
+						<td>{{ flat.name }}</td>
+						<td>{{ flat.description }}</td>
+						<td>{{ flat.price }}</td>
+						<td>{{ flat.image }}</td>
+						<td>{{ flat.active }}</td>
+					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		<div class="navigation">
-    {{ knp_pagination_render(pagination) }}
+		<div class="navigation d-flex justify-content-center mt-4">
+			{{ knp_pagination_render(flats) }}
 		</div>
-	</div>
-{% endblock %}
+	{% else %}
+		<h4>Il n'y a pas de plats</h4>
+	{% endif %}
+</div>{% endblock %}
 
