--- a/templates/pages/flat/edit.html.twig
+++ b/templates/pages/flat/edit.html.twig
@@ -2,13 +2,12 @@
 
 {% block body %}
 	<div class="container">
-		<h1 class="mt-4">Ajout d'un plat</h1>
-		{% for message in app.flashes('success') %}
+		<h1 class="mt-4">Modification d'un plat</h1>
+		{{% for message in app.flashes('success') %}
 			<div class=" alert alert-success mt-4">
 				{{ message }}
 			</div>
 		{% endfor %}
 		{{ form(form) }}
-		</div>
+		</div>}
 	{% endblock %}
-
