--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,16 +1,23 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarColor02">
 			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">Home
-						<span class="visually-hidden">(current)</span>
-					</a>
+					<a class="nav-link active" href="{{path('app.accueil')}}">Accueil</a>
 				</li>
+				<li class="nav-item">
+          <a class="nav-link" href="#">Catégories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{path('flat.index')}}">Plats</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
 			</ul>
 
 		</div>
