--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -10,7 +10,7 @@
 					<a class="nav-link active" href="{{path('app.accueil')}}">Accueil</a>
 				</li>
 				<li class="nav-item">
-          <a class="nav-link" href="#">Catégories</a>
+          <a class="nav-link" href="{{path('category.index')}}">Catégories</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{path('flat.index')}}">Plats</a>
