--- a/templates/pages/category/index.html.twig
+++ b/templates/pages/category/index.html.twig
@@ -27,6 +27,8 @@
 					<th scope="col">Nom</th>
 					<th scope="col">Image</th>
 					<th scope="col">active</th>
+					<th scope="col">edition</th>
+					<th scope="col">suppression</th>
 				</tr>
 			</thead>
 			<tbody>
