--- a/templates/pages/flat/index.html.twig
+++ b/templates/pages/flat/index.html.twig
@@ -29,6 +29,7 @@
 					<th scope="col">prix</th>
 					<th scope="col">image</th>
 					<th scope="col">active</th>
+					<th scope="col">categorie</th>
 					<th scope="col">Edition</th>
 					<th scope="col">Suppression</th>
 				</tr>
@@ -42,11 +43,12 @@
 						<td>{{ flat.price }}</td>
 						<td>{{ flat.image }}</td>
 						<td>{{ flat.active }}</td>
+						<td>{{ flat.category }}</td>
 						<td>
 						<a href="{{ path('flat.edit', { id: flat.id })}}" class="btn btn-info">Modifier</a>
 						</td>
 						<td>
-						<a href="{{ path('flat.delete', { id: flat.id })}}" class="btn btn-warning">Supprimer</a>
+						<a href="{{ path('flat.delete', { id: flat.id })}}" class="btn btn-info">Supprimer</a>
 						</td>
 					</tr>
 				{% endfor %}
