--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -16,7 +16,7 @@
           <a class="nav-link" href="{{path('flat.index')}}">Plats</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{{path('contact.index')}}">Contact</a>
         </li>
 			</ul>
 
