--- a/templates/pages/flat/edit.html.twig
+++ b/templates/pages/flat/edit.html.twig
@@ -1,5 +1,6 @@
 {% extends "base.html.twig" %}
-
+{% block title %}TheDistrict - Modification d'un plat
+{% endblock %}
 {% block body %}
 	<div class="container">
 		<h1 class="mt-4">Modification d'un plat</h1>
