--- a/templates/pages/category/new.html.twig
+++ b/templates/pages/category/new.html.twig
@@ -1,5 +1,6 @@
 {% extends "base.html.twig" %}
-
+{% block title %}TheDistrict - Ajout d'une categorie
+{% endblock %}
 {% block body %}
 	<div class="container">
 		<h1 class="mt-4">Ajout d'une catégorie</h1>
