--- a/templates/pages/user/edit.html.twig
+++ b/templates/pages/user/edit.html.twig
@@ -6,12 +6,14 @@
 {% block body %}
 
 	<div class="container">
-		<h1 class="mt-4">Formulaire de modification d'un utilisateur</h1>
-		{% for message in app.flashes('success') %}
-			<div class=" alert alert-success mt-4">
+		<h1 class="mt-4">Formulaire de modification des informations de l'utilisateur</h1>
+
+		{% for message in app.flashes('warning') %}
+			<div class=" alert alert-warning mt-4">
 				{{ message }}
 			</div>
 		{% endfor %}
+		
 		{{ form(form) }}
 		</div>
 
