--- a/templates/pages/user/edit_password.html.twig
+++ b/templates/pages/user/edit_password.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}TheDistrict - Modification de l'utilisateur
+{% block title %}TheDistrict - Modification du mot de passe
 {% endblock %}
 
 {% block body %}
 
 	<div class="container">
-		<h1 class="mt-4">Formulaire de modification d'un utilisateur</h1>
+		<h1 class="mt-4">Formulaire de modification du mot de passe de l'utilisateur</h1>
 		{% for message in app.flashes('success') %}
 			<div class=" alert alert-success mt-4">
 				{{ message }}
@@ -16,4 +16,3 @@
 		</div>
 
 	{% endblock %}
-
