--- a/templates/pages/flat/show.html.twig
+++ b/templates/pages/flat/show.html.twig
@@ -18,7 +18,7 @@
 
 		<p>La moyenne de ce plat est de
 			{{ flat.average|number_format(2, '.', ',') }}
-			/5</p>
+			</p>
 
 		
 
@@ -35,9 +35,13 @@
 			{{ flat.description|raw }}
 		</div>
 
-		<div class="mark mt-4">
+        <div class="flat__image mt-4">
+        <img style="max-width:50%" src="{{ vich_uploader_asset(flat, 'imageFile') }}" >
+        </div>
+
+		<div class="mt-4">
 			{{ form(form) }}
-			</div>
+		</div>
 
 		</div>
 	{% endblock %}
