--- a/templates/pages/category/edit.html.twig
+++ b/templates/pages/category/edit.html.twig
@@ -1,15 +1,41 @@
 {% extends "base.html.twig" %}
-{% block title %}TheDistrict - Modification d'une categorie'
+
+{% block title %}TheDistrict - Modification d'une categorie
 {% endblock %}
+
 {% block body %}
 	<div class="container">
-		<h1 class="mt-4">Modification d'une catégorie</h1>
-		{% for message in app.flashes('success') %}
-			<div class=" alert alert-success mt-4">
-				{{ message }}
+
+		<h1 class="mt-4">Modification de la categorie</h1>
+
+		<form name="category" method="post" enctype="multipart/form-data">
+
+			<div class="form-group">
+				{{ form_label(form.name) }}
+				{{ form_widget(form.name) }}
+				<div class="form-error">
+					{{ form_errors(form.name) }}
+				</div>
 			</div>
-		{% endfor %}
-		{{ form(form) }}
-		</div>
-	{% endblock %}
+
+			<div class="form-image">
+				{{ form_row(form.imageFile) }}
+			</div>
+
+			<div class="form-group">
+				{{ form_label(form.active) }}
+				{{ form_widget(form.active) }}
+				<div class="form-error">
+					{{ form_errors(form.active) }}
+				</div>
+			</div>
+
+			{{ form_row(form._token) }}
+
+			<button type="submit" id="category_submit" name="category[submit]" class="btn btn-primary mt-4">Modifier une categorie</button>
+
+		</form>
+	</div>
+{% endblock %}
+
 
