--- a/templates/pages/category/index.html.twig
+++ b/templates/pages/category/index.html.twig
@@ -1,59 +1,68 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}TheDistrict-Catégories
+{% block title %}TheDistrict - Catégories
 {% endblock %}
 
 {% block body %}
 	<div class="container mt-4">
-	{% if not categorys.items is same as([]) %}
-		<h1>Catégories</h1>
-		<a href="{{ path('category.new')}}" class="btn btn-primary">Ajouter une catégorie</a>
 		{% for message in app.flashes('success') %}
-			<div class=" alert alert-success mt-4">
+			<div class="alert alert-success mt-4">
 				{{ message }}
 			</div>
-			{% endfor %}
-		<div class="count mt-4">
-			<h4>Il y a
-			{{ categorys.getTotalItemCount}}
-				catégories au total
-			</h4>
-		</div>
+		{% endfor %}
 
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col">Numéro</th>
-					<th scope="col">Nom</th>
-					<th scope="col">Image</th>
-					<th scope="col">active</th>
-					<th scope="col">edition</th>
-					<th scope="col">suppression</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for category in categorys %}
-					<tr class="table-primary">
-						<th scope="row ">{{ category.id }}</th>
-						<td>{{ category.name }}</td>
-						<td>{{ category.image }}</td>
-						<td>{{ category.active }}</td>
-						<td>
-						<a href="{{ path('category.edit', { id: category.id })}}" class="btn btn-success">Modifier</a>
-						</td>
-						<td>
-						<a href="{{ path('category.delete', { id: category.id })}}" class="btn btn-danger">Supprimer</a>
-						</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-		<div class="navigation d-flex justify-content-center mt-4">
-				{{ knp_pagination_render(categorys) }}
+		{% if not categorys.items is same as([]) %}
+			<h1>Mes Catégories</h1>
+
+			<a href="{{ path('category.new') }}" class="btn btn-primary">
+				Créer une categorie
+			</a>
+
+			<div class="count mt-4">Il y a
+				{{ categorys.getTotalItemCount }}
+				categorie(s)
 			</div>
 
-	{% else %}
-		<h4>Il n'y a pas de catégorie</h4>
-	{% endif %}
-</div>{% endblock %}
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th scope="col">Numéro</th>
+						<th scope="col">Nom</th>
+						<th scope="col">active</th>
+						<th scope="col">Modifier</th>
+						<th scope="col">Supprimer</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for category in categorys %}
+						<tr class="table-primary">
+							<th scope="row">{{ category.id }}</th>
+							<td>{{ category.name }}</td>
+							<td>{{ category.active }}</td>
+							
+														
+							
+							
+							<td>
+								<a href="{{ path('category.edit', { id: category.id }) }}" class="btn btn-info">Modifier</a>
+							</td>
+							<td>
+								<a href="{{ path('category.delete', { id: category.id }) }}" class="btn btn-warning">Supprimer</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
+			<div class="navigation d-flex justify-content-center mt-4">
+				{{ knp_pagination_render(categorys) }}
+			</div>
+		{% else %}
+			<h4>Il n'y a pas de categorie</h4>
+
+			<a href="{{ path('category.new') }}" class="btn btn-primary">
+				Créer une recette
+			</a>
+		{% endif %}
+	</div>
+{% endblock %}
