--- a/templates/pages/flat/edit.html.twig
+++ b/templates/pages/flat/edit.html.twig
@@ -1,14 +1,65 @@
 {% extends "base.html.twig" %}
+
 {% block title %}TheDistrict - Modification d'un plat
 {% endblock %}
+
 {% block body %}
 	<div class="container">
-		<h1 class="mt-4">Modification d'un plat</h1>
-		{% for message in app.flashes('success') %}
-			<div class=" alert alert-success mt-4">
-				{{ message }}
+
+		<h1 class="mt-4">Modification d'un plat'</h1>
+
+		<form name="flat" method="post" enctype="multipart/form-data">
+
+			<div class="form-group">
+				{{ form_label(form.name) }}
+				{{ form_widget(form.name) }}
+				<div class="form-error">
+					{{ form_errors(form.name) }}
+				</div>
 			</div>
-		{% endfor %}
-		{{ form(form) }}
-		</div>
-	{% endblock %}
+
+			<div class="form-group">
+				{{ form_label(form.price) }}
+				{{ form_widget(form.price) }}
+				<div class="form-error">
+					{{ form_errors(form.price) }}
+				</div>
+			</div>
+
+			<div class="form-group">
+				{{ form_label(form.description) }}
+				{{ form_widget(form.description) }}
+				<div class="form-error">
+					{{ form_errors(form.description) }}
+				</div>
+			</div>
+
+			<div class="form-image">
+				{{ form_row(form.imageFile) }}
+			</div>
+
+			<div class="form-group">
+				{{ form_label(form.active) }}
+				{{ form_widget(form.active) }}
+				<div class="form-error">
+					{{ form_errors(form.active) }}
+				</div>
+			</div>
+
+			<div class="form-group mt-4">
+				{{ form_label(form.category) }}
+				{{ form_widget(form.category) }}
+				<div class="form-error">
+					{{ form_errors(form.category) }}
+				</div>
+			</div>
+
+			{{ form_row(form._token) }}
+
+			<button type="submit" id="flat_submit" name="flat[submit]" class="btn btn-primary mt-4">Modifier un plat</button>
+
+		</form>
+	</div>
+{% endblock %}
+
+
