--- a/templates/pages/flat/index.html.twig
+++ b/templates/pages/flat/index.html.twig
@@ -1,63 +1,76 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}TheDistrict-Plats
+{% block title %}TheDistrict - Plats
 {% endblock %}
 
 {% block body %}
 	<div class="container mt-4">
-	{% if not flats.items is same as([]) %}
-		<h1>Plats</h1>
-		<a href="{{ path('flat.new')}}" class="btn btn-primary">Ajouter un plat</a>
 		{% for message in app.flashes('success') %}
-			<div class=" alert alert-success mt-4">
+			<div class="alert alert-success mt-4">
 				{{ message }}
 			</div>
-			{% endfor %}
-		<div class="count mt-4">
-			<h4>Il y a
-			{{ flats.getTotalItemCount}}
-				plats au total
-			</h4>
-		</div>
+		{% endfor %}
 
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col">Numéro</th>
-					<th scope="col">Nom</th>
-					<th scope="col">Description</th>
-					<th scope="col">prix</th>
-					<th scope="col">active</th>
-					<th scope="col">categorie</th>
-					<th scope="col">Edition</th>
-					<th scope="col">Suppression</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for flat in flats %}
-					<tr class="table-primary">
-						<th scope="row">{{ flat.id }}</th>
-						<td>{{ flat.name }}</td>
-						<td>{{ flat.description }}</td>
-						<td>{{ flat.price|number_format(2, '.', ',') }}€
-						</td>
-						<td>{{ flat.active }}</td>
-						<td>{{ flat.category }}</td>
-						<td>
-						<a href="{{ path('flat.edit', { id: flat.id })}}" class="btn btn-success">Modifier</a>
-						</td>
-						<td>
-						<a href="{{ path('flat.delete', { id: flat.id })}}" class="btn btn-danger">Supprimer</a>
-						</td>
+		{% if not flats.items is same as([]) %}
+			<h1>Mes Plats</h1>
+
+			<a href="{{ path('flat.new') }}" class="btn btn-primary">
+				Créer un plat
+			</a>
+
+			<div class="count mt-4">Il y a
+				{{ flats.getTotalItemCount }}
+				plat(s)
+			</div>
+
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th scope="col">Numéro</th>
+						<th scope="col">Nom</th>
+						<th scope="col">prix</th>
+						<th scope="col">Description</th>
+						<th scope="col">image</th>
+						<th scope="col">active</th>
+						<th scope="col">categorie</th>
+						<th scope="col">Modifier</th>
+						<th scope="col">Supprimer</th>
 					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-		<div class="navigation d-flex justify-content-center mt-4">
-			{{ knp_pagination_render(flats) }}
-		</div>
-	{% else %}
-		<h4>Il n'y a pas de plats</h4>
-	{% endif %}
-</div>{% endblock %}
+				</thead>
+				<tbody>
+					{% for flat in flats %}
+						<tr class="table-primary">
+							<th scope="row">{{ flat.id }}</th>
+							<td>{{ flat.name }}</td>
+							<td>{{ flat.price }}</td>
+							<td>{{ flat.description }}</td>
+							<td>{{ flat.imageFile }}</td>
+							<td>{{ flat.active }}</td>
+							<td>{{ flat.category }}</td>
+							
+														
+							
+							
+							<td>
+								<a href="{{ path('flat.edit', { id: flat.id }) }}" class="btn btn-info">Modifier</a>
+							</td>
+							<td>
+								<a href="{{ path('flat.delete', { id: flat.id }) }}" class="btn btn-warning">Supprimer</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
+			<div class="navigation d-flex justify-content-center mt-4">
+				{{ knp_pagination_render(flats) }}
+			</div>
+		{% else %}
+			<h4>Il n'y a pas de plat</h4>
+
+			<a href="{{ path('flat.new') }}" class="btn btn-primary">
+				Créer un plat
+			</a>
+		{% endif %}
+	</div>
+{% endblock %}
