--- a/templates/pages/flat/new.html.twig
+++ b/templates/pages/flat/new.html.twig
@@ -1,15 +1,63 @@
 {% extends "base.html.twig" %}
-{% block title %}TheDistrict - Ajout d'un plat
+
+{% block title %}TheDistrict - Nouveau plat
 {% endblock %}
+
 {% block body %}
 	<div class="container">
-		<h1 class="mt-4">Ajout d'un plat</h1>
-		{% for message in app.flashes('success') %}
-			<div class=" alert alert-success mt-4">
-				{{ message }}
-			</div>
-		{% endfor %}
-		{{ form(form) }}
-		</div>
-	{% endblock %}
 
+		<h1 class="mt-4">Création d'un plat</h1>
+
+		{{ form_start(form) }}
+
+		<div class="form-group">
+			{{ form_label(form.name) }}
+			{{ form_widget(form.name) }}
+			<div class="form-error">
+				{{ form_errors(form.name) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.price) }}
+			{{ form_widget(form.price) }}
+			<div class="form-error">
+				{{ form_errors(form.price) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.description) }}
+			{{ form_widget(form.description) }}
+			<div class="form-error">
+				{{ form_errors(form.description) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.imageFile) }}
+			{{ form_widget(form.imageFile) }}
+			<div class="form-error">
+				{{ form_errors(form.imageFile) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.active) }}
+			{{ form_widget(form.active) }}
+			<div class="form-error">
+				{{ form_errors(form.active) }}
+			</div>
+		</div>
+
+		<div class="form-group">
+			{{ form_label(form.category) }}
+			{{ form_widget(form.category) }}
+			<div class="form-error">
+				{{ form_errors(form.category) }}
+			</div>
+		</div>
+
+		{{ form_end(form) }}
+	</div>
+{% endblock %}
