--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,9 @@
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" 
-            integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" </script>
+            <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+           <script integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
             {% endblock %}
         {% endblock %}
     </head>
@@ -22,5 +23,6 @@
     {% include "partials/_header.html.twig" %}
     {% endblock %}
         {% block body %}{% endblock %}
+        {% include "partials/_footer.html.twig" %}
     </body>
 </html>
