--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,58 +1,52 @@
 {% extends "base.html.twig" %}
 
-{% block title %}
-	TheDistrict-Accueil
+{% block title %}TheDistrict - Accueil
 {% endblock %}
 
 {% block body %}
-		<div class="container mt-4">
-		<h2>Catégories</h2>
+	<div class="container mt-4 ">
+		<div class="jumbotron">
+			<h1 class="display-4">Bienvenue sur TheDistrict</h1>
+			
+			<hr class="my-4">
+			<p>Rendez-vous sur la page d'inscription pour utiliser l'application.</p>
+			<a class="btn btn-primary btn-lgz" href="{{ path('security.registration') }}" role="button">Inscription</a>
+		</div>
 
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col">Numéro</th>
-					<th scope="col">Nom</th>
-					<th scope="col">active</th>
-				</tr>
-			</thead>
-			<tbody>
-					{% for category in categorys %}
-					<tr class="table-primary">
-						<th scope="row ">{{ category.id }}</th>
-						<td>{{ category.name }}</td>
-						<td>{{ category.active }}</td>
-						<td>
-					</tr>
+		<div class="categorys">
+			<h2 class="mt-4">Categories</h2>
+			<div class="d-flex justify-content-between mt-4">
+				{% for category in categorys %}
+					<div class="card border-primary mb-3" style="max-width: 20rem;">
+						<div class="card-header">categorie n°{{ category.id }}</div>
+						<div class="card-body">
+							<h4 class="card-title">
+								<a href="{{ path('flat.index', {id: category.id}) }}">{{ category.name }}</a>
+							</h4>
+							<p class="card-text">{{ category.active }}</p>
+						</div>
+					</div>
 				{% endfor %}
-			</tbody>
-		</table>
-		<h2>Plats</h2>
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col">Numéro</th>
-					<th scope="col">Nom</th>
-					<th scope="col">Description</th>
-					<th scope="col">prix</th>
-					<th scope="col">active</th>
-					<th scope="col">categorie</th>
-				</tr>
-			</thead>
-		<tbody>
+			</div>
+		</div>
+
+		<div class="flats">
+			<h2 class="mt-4">Plats</h2>
+			<div class="d-flex justify-content-between mt-4">
 				{% for flat in flats %}
-					<tr class="table-primary">
-						<th scope="row">{{ flat.id }}</th>
-						<td>{{ flat.name }}</td>
-						<td>{{ flat.description }}</td>
-						<td>{{ flat.price }}</td>
-						<td>{{ flat.active }}</td>
-						<td>{{ flat.category }}</td>
-					</tr>
+					<div class="card border-primary mb-3" style="max-width: 20rem;">
+						<div class="card-header">plat n°{{ flat.id }}</div>
+						<div class="card-body">
+							<h4 class="card-title">
+								<a href="{{ path('flat.show', {id: flat.id}) }}">{{ flat.name }}</a>
+							</h4>
+							<p class="card-text">{{ flat.description|slice(0, 100) ~ '...' }}</p>
+						</div>
+					</div>
 				{% endfor %}
-			</tbody>
+			</div>
+		</div>
 	</div>
-
-
 {% endblock %}
+
 
