--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -21,33 +21,37 @@
 			</ul>
 		</div>
 		<div class="d-flex">
-				<ul class="navbar-nav me-auto">
-					{% if app.user %}
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.fullName }}</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier mes informations</a>
-								<a class="dropdown-item" href="{{ path('user.edit.password', {id : app.user.id}) }}">Modifier mon mot de passe</a>
+			<ul class="navbar-nav me-auto">
+				{% if app.user %}
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.fullName }}</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier mes informations</a>
+							<a class="dropdown-item" href="{{ path('user.edit.password', {id : app.user.id}) }}">Modifier mon mot de passe</a>
+							<div class="dropdown-divider"></div>
+							{% if 'ROLE_ADMIN' in app.user.roles %}
+								<a class="dropdown-item" href="{{ path('admin') }}">Administration</a>
 								<div class="dropdown-divider"></div>
-								{% if 'ROLE_ADMIN' in app.user.roles %}
-									<a class="dropdown-item" href="{{ path('admin') }}">Administration</a>
-									<div class="dropdown-divider"></div>
-								{% endif %}
-								<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnexion</a>
-							</div>
-						</li>
+							{% endif %}
+							{% if 'ROLE_USER' in app.user.roles %}
+					<a class="dropdown-item" href="{{ path('basket_index') }}">Mon panier</a>
 					{% else %}
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('security.login') }}">Connexion
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('security.registration') }}">Inscription
-							</a>
-						</li>
-					{% endif %}
-				</ul>
-			</div>
+				{% endif %}
+							<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnexion</a>
+						</div>
+					</li>
+				{% else %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('security.login') }}">Connexion
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('security.registration') }}">Inscription
+						</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
 
 	</div>
 </nav>
